applications/nginx/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - image: docker.io/library/nginx:1.31.6
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
      restartPolicy: Always
