applications/nginx/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service

spec:
  selector:
    app: default
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 80
      targetPort: 80
