applications/nginx/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress

spec:
  ingressClassName: haproxy
  tls:
    - secretName: ggrel-net-tls
      hosts:
        - ggrel.net
    - secretName: noa-pp-ua-tls
      hosts:
        - noa.pp.ua
        - "*.noa.pp.ua"
    - secretName: rokoucha-net-tls
      hosts:
        - dot.rokoucha.net
        - pl.rokoucha.net
    - secretName: sayn-wittgenste-in-tls
      hosts:
        - sayn-wittgenste.in
        - heinrike.prinzessin.zu.sayn-wittgenste.in
  rules:
    - host: ggrel.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: dot.rokoucha.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: pl.rokoucha.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: sayn-wittgenste.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: heinrike.prinzessin.zu.sayn-wittgenste.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: noa.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: himesaka.noa.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
