applications/nginx/resources/egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:app: default
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - {}
