applications/nginx/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: nginx

spec:
  podSelector:
    matchLabels:
      app: default
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: haproxy-ingress
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 80
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress
spec:
  endpointSelector:
    matchLabels:
      k8s:app: default
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
    - {}
